--- a/client/components/Calculator.css
+++ b/client/components/Calculator.css
@@ -1,3 +1,45 @@
-.button {
-  color: red;
+a {
+  text-decoration: none;
+  color: #f06324;
+}
+
+p {
+  color: #bbbbbb;
+  font-size: 12px;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: white;
+  padding: 6px 0px;
+}
+
+.compare {
+  display: flex;
+  flex-direction: row;
+}
+
+.side {
+  display: flex;
+  flex-direction: column;
+  width: 600px;
+  padding: 4px 10px;
+}
+
+.side#otherSide {
+  color: gray;
+  align-items: flex-end;
+  text-align: end;
+  border-radius: 3px 0 0 3px;
+}
+
+.side#ourSide {
+  border-radius: 0 3px 3px 0;
+  border-left: 3px solid gray;
+}
+
+.fine {
+  padding: 6px 0;
 }
